test/parsetest/valid/simple_arithmetic.java
class A {
    public int a(){
        return !!!!(1+3 % 3)*4 && 4 && (!a[4])[5];
    }
}