test/parsetest/invalid/g5_noStmtAfterIf.java
class A {
  public void a() {
    
    if (true) void a;
    
  }
}
